# xs3lerator

./: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  build.rs  docker-compose.yml
.github/workflows/: docker.yml  tests.yml
bench/: bench_read.rs
docker/: Dockerfile.mount-s3  localstack-init.sh  mount-s3-entrypoint.sh
src/: cache.rs  chunk_cache.rs  chunk_upload.rs  config.rs  disk_cache.rs  download.rs  error.rs  es_client.rs  evictor.rs  fdb_client.rs  finalize.rs  handler.rs  headers.rs  http_pool.rs  lib.rs  main.rs  manifest.rs  planner.rs  range.rs  s3.rs  s3_client.rs  s3_upload.rs  server.rs  trace.rs  upstream_fetcher.rs
tests/: mock_integration.rs  redirect_integration.rs  revalidation_integration.rs  unknown_size_integration.rs
tests/pytest/: conftest.py  requirements.txt  test_proxy.py  test_server.py
