[package]
name = "xs3lerator"
version = "0.7.0"
edition = "2021"
description = "High-performance HTTP download accelerator and caching proxy for S3"
license = "MIT"

[[bin]]
name = "xs3lerator"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
axum = "0.7"
base64 = "0.22"
byte-unit = "5"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["http2"] }
hyper-util = { version = "0.1", features = ["http1", "http2", "server-auto", "tokio"] }
libc = "0.2"
nix = { version = "0.29", features = ["fs"] }
object_store = { version = "0.12", features = ["aws"] }
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "gzip", "deflate", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
io-uring = "0.7"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dev-dependencies]
rand = "0.9"
reqwest = { version = "0.12", features = ["rustls-tls"] }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
